# pytest-case

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pytest-case-ci-cd.yml  pytest-case-ci.yml  release.yml  tests-and-coverage.yml
api_reference/: index.html
docs/: api_reference.md
pytest_case/: __init__.py  case.py  types.py
tests/: conftest.py  test_examples.py
tests/utils/: test_case_utils.py
